--- a/BRCA_VarDb/templates/BRCA_VarDb/patients.html
+++ b/BRCA_VarDb/templates/BRCA_VarDb/patients.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
+{% load render_table from django_tables2 %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <title>BRCA VarDb</title>
 </head>
 <body>
     <h1>BRCA1 Patients</h1>
     <p>
-	{% for patient in data%}
-        {{ data.forename}}
-        {{ data.surname }}
-        {{ data.reg_date }}
-	{% endfor %}
+	
+	{% render_table data %}
+	
+
     </p>
-     <a href="/">logout</a>
 </body>
 </html>
